# luckfox_pico_lvgl_example

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
custom/: custom.h  custom_main.c  custom_musicplayer.c  custom_sketchpad.c  custom_wifi.c
lib/: lv_conf.h  lv_drv_conf.h
lib/glibc/libcjson/: libcjson.so.1.7.15  libcjson_utils.so.1.7.15
lib/glibc/libcjson/cmake/cJSON/: cJSONConfig.cmake  cjson-noconfig.cmake  cjson.cmake  cjson_utils-noconfig.cmake  cjson_utils.cmake
lib/glibc/libcjson/pkgconfig/: libcjson.pc  libcjson_utils.pc
lib/glibc/libdrm/: libdrm.so.2.4.0  libdrm_amdgpu.so.1.0.0  libdrm_etnaviv.so.1.0.0  libdrm_freedreno.so.1.0.0  libdrm_nouveau.so.2.0.0  libdrm_radeon.so.1.0.1
lib/glibc/libdrm/pkgconfig/: libdrm.pc  libdrm_amdgpu.pc  libdrm_etnaviv.pc  libdrm_freedreno.pc  libdrm_nouveau.pc  libdrm_radeon.pc  libdrm_vc4.pc
lib/libcjson/: libcjson.so.1.7.15  libcjson_utils.so.1.7.15
lib/lvgl/: lvgl.h
lib/lvgl/env_support/cmake/: custom.cmake
lib/lvgl/src/: lv_conf_internal.h  lv_conf_kconfig.h
lib/lvgl/src/core/: lv_disp.c  lv_group.c  lv_indev.c  lv_indev_scroll.c  lv_obj.c  lv_obj.h  lv_obj_draw.c  lv_obj_style.c  lv_obj_style.h  lv_obj_style_gen.c  lv_obj_style_gen.h  lv_obj_tree.c  lv_refr.c
lib/lvgl/src/draw/: lv_draw_img.c  lv_draw_label.c  lv_draw_label.h  lv_draw_line.c  lv_draw_line.h  lv_draw_mask.c  lv_draw_mask.h  lv_draw_rect.c  lv_draw_rect.h  lv_img_buf.c  lv_img_buf.h  lv_img_decoder.c
lib/lvgl/src/draw/arm2d/: lv_gpu_arm2d.c
lib/lvgl/src/draw/nxp/vglite/: lv_draw_vglite.c  lv_draw_vglite_arc.c
lib/lvgl/src/draw/renesas/: lv_draw_renesas.mk  lv_gpu_d2_draw_label.c  lv_gpu_d2_ra6m3.c  lv_gpu_d2_ra6m3.h
lib/lvgl/src/draw/sdl/: lv_draw_sdl_arc.c  lv_draw_sdl_composite.c  lv_draw_sdl_composite.h  lv_draw_sdl_img.c  lv_draw_sdl_img.h  lv_draw_sdl_label.c  lv_draw_sdl_layer.c  lv_draw_sdl_layer.h  lv_draw_sdl_line.c  lv_draw_sdl_polygon.c  lv_draw_sdl_priv.h  lv_draw_sdl_rect.c  lv_draw_sdl_rect.h  lv_draw_sdl_texture_cache.c  lv_draw_sdl_texture_cache.h
lib/lvgl/src/draw/stm32_dma2d/: lv_gpu_stm32_dma2d.c  lv_gpu_stm32_dma2d.h
lib/lvgl/src/draw/sw/: lv_draw_sw.h  lv_draw_sw_blend.c  lv_draw_sw_blend.h  lv_draw_sw_dither.c  lv_draw_sw_dither.h  lv_draw_sw_gradient.c  lv_draw_sw_gradient.h  lv_draw_sw_img.c  lv_draw_sw_letter.c  lv_draw_sw_line.c  lv_draw_sw_rect.c
lib/lvgl/src/extra/layouts/flex/: lv_flex.c
lib/lvgl/src/extra/libs/fsdrv/: lv_fs_posix.c
lib/lvgl/src/extra/libs/png/: lv_png.c
lib/lvgl/src/extra/widgets/animimg/: lv_animimg.c
lib/lvgl/src/extra/widgets/chart/: lv_chart.c
lib/lvgl/src/extra/widgets/imgbtn/: lv_imgbtn.c
lib/lvgl/src/extra/widgets/menu/: lv_menu.c
lib/lvgl/src/extra/widgets/meter/: lv_meter.c
lib/lvgl/src/extra/widgets/msgbox/: lv_msgbox.c
lib/lvgl/src/extra/widgets/radiobtn/: lv_radiobtn.c
lib/lvgl/src/extra/widgets/span/: lv_span.c
lib/lvgl/src/extra/widgets/spinbox/: lv_spinbox.c
lib/lvgl/src/extra/widgets/tabview/: lv_tabview.c  lv_tabview.h
lib/lvgl/src/font/: lv_font_fmt_txt.c
lib/lvgl/src/hal/: lv_hal_disp.c  lv_hal_disp.h  lv_hal_tick.c  lv_hal_tick.h
lib/lvgl/src/misc/: lv_area.c  lv_area.h  lv_bidi.c  lv_color.c  lv_color.h  lv_math.c  lv_math.h  lv_mem.c  lv_mem.h  lv_style.c  lv_style.h  lv_style_gen.c  lv_style_gen.h  lv_timer.c  lv_timer.h
lib/lvgl/src/widgets/: lv_arc.c  lv_bar.c  lv_btnmatrix.c  lv_btnmatrix.h  lv_dropdown.c
lib/uclibc/libdrm/: libdrm.so.2.4.0
src/: main.c
